[tool.poetry]
name = "golf-swing-analysis"
version = "0.1.0"
description = "A Flask application to analyze golf swing videos using Google Gemini 1.5 flash model and return structured JSON."
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^3.0.3"
requests = "^2.25"
google-cloud = "^0.34"
opencv-python = "^4.5.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
